src/objects/Indent_Request_Dispatch_Detail__c.object
<CustomObject>
    <fields>
        <fullName>Approved_Quantity__c</fullName>
        <formula>Indent_Request_Detail__r.Approved_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dispatch_Date__c</fullName>
        <label>Dispatch Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dispatch_Quantity__c</fullName>
        <label>Dispatch Quantity</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indent_Request_Detail__c</fullName>
        <label>Indent Request Detail</label>
        <referenceTo>Indent_Request_Detail__c</referenceTo>
        <relationshipLabel>Indent Request Dispatch Details</relationshipLabel>
        <relationshipName>Indent_Request_Dispatch_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pending_Quantity__c</fullName>
        <formula>Approved_Quantity__c -  Dispatch_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <label>Indent Request Dispatch Detail</label>
    <nameField>
        <label>Dispatch No</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Indent Request Dispatch Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Dispatch_Quantity_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Dispatch_Quantity__c &gt;  Approved_Quantity__c || Dispatch_Quantity__c = 0</errorConditionFormula>
        <errorDisplayField>Dispatch_Quantity__c</errorDisplayField>
        <errorMessage>Dispatch Quantity entered cannot be 0 or greater than the approved quantity . Kindly verify</errorMessage>
    </validationRules>
</CustomObject>